--- a/cale.html
+++ b/cale.html
@@ -47,10 +47,10 @@
     </div>
     <footer>
         <ul>
-            <li><a href="./cale.html">캘린더</a></li>
-            <li><a href="./index.html">채팅</a></li>
+            <li><a href="./cale.html"><img src="./img/icon3.png" alt=""></a></li>
+            <li><a href="./index.html"><img src="./img/icon1.png" alt=""></a></li>
             <!-- <li><a href="#">성경</a></li> -->
-            <li><a href="#">질문</a></li>
+            <li><a href="#"><img src="./img/icon2.png" alt=""></a></li>
         </ul>
     </footer>
 </body>
