--- a/cale.html
+++ b/cale.html
@@ -2,10 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendar</title>
-    <style>
-        
-    </style>
+    <title>나만의 채팅창</title>
     <link rel="stylesheet" href="./css/base.css">
 </head>
 <body>
