--- a/cale.html
+++ b/cale.html
@@ -2,7 +2,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나만의 채팅창</title>
+    <title>JESUS LOVE</title>
+    <style>
+        
+    </style>
     <link rel="stylesheet" href="./css/base.css">
 </head>
 <body>
