--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <title>나만의 채팅창</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JESUS LOVE</title>
     <link rel="stylesheet" href="./css/base.css">
 </head>
 <body>
